--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/framework-bundle":        "~2.1",
         "doctrine/orm":                    "2.3.*@stable",
         "stof/doctrine-extensions-bundle": "dev-master",
-        "white-october/pagerfanta-bundle": "dev-master",
+        "white-october/pagerfanta-bundle": "dev-2.1",
         "ruler/ruler":                      "*"
     },
     "require-dev": {
