--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle":        "~2.1",
-        "doctrine/orm":                    "2.3.*@stable",
+        "doctrine/orm":                    "~2.3",
         "stof/doctrine-extensions-bundle": "dev-master",
-        "white-october/pagerfanta-bundle": "2.1.*@dev",
+        "white-october/pagerfanta-bundle": "@stable",
         "ruler/ruler":                      "*"
     },
     "require-dev": {
